[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mobile-ui-env"
version = "0.1.0"
description = "RL-style environment simulating a mobile app for AI agent training and evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sudhanshu Shekhar"},
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
llm = [
    # No extra deps — uses urllib.request from stdlib
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["mobile_ui_env*"]
